Fix table header alignment

--- a/ui/scss/component/_table.scss
+++ b/ui/scss/component/_table.scss
@@ -69,7 +69,7 @@ td {
 }
 
 .table__item--align-right {
-  text-align: right;
+  text-align: right !important;
 
   * {
     text-align: right;
